# Reflex

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
examples/: demo_block_cache.py
examples/inference/: async.yaml  sync.yaml
reflex/: __init__.py  cli.py  run.py  run_streaming.py
reflex/configs/: __init__.py  run_config.py
reflex/layers/: __init__.py  attention.py  dynamic_embedding.py  linear.py  mixed_precision_attention.py  optimized_attention.py  quantize_kernel.py  rope.py  streaming_attention.py
reflex/optimizations/: __init__.py  dynamic_embedding_cache.py  single_frame_optimizer.py
reflex/policies/: __init__.py  factory.py  normalize.py
reflex/policies/pi0/: __init__.py  configuration_pi0.py  modeling_pi0.py  utils.py
reflex/policies/pi05/: __init__.py  concurrent_executor.py  configuration_pi05.py  modeling_pi05.py  streaming_manager.py  utils.py
